--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -120,6 +120,10 @@ p {
     display: inline;
     margin: 2px;
   }
+  .activePage {
+    text-decoration: underline;
+    font-weight: bold;
+  }
   margin-bottom: 50px;
 }
 
